simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: 
    app: my-app
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
